# BMVC-FADE

./: .gitignore  pyproject.toml  requirements.txt
FADE/: fade.py
FADE/datasets/: mvtec.py  utils.py  visa.py
FADE/evaluation/: utils.py
FADE/utils/: anomaly_detection.py  image_model.py  text_model.py
scripts/: run_fade.py
